--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 arabic-reshaper==3.0.0
 asgiref==3.7.2
-backports.zoneinfo==0.2.1
 asn1crypto==1.5.1
 certifi==2023.7.22
 cffi==1.15.1
@@ -18,7 +17,9 @@ html5lib==1.1
 idna==3.4
 lxml==4.9.3
 num2words==0.5.12
+numpy==1.25.2
 oscrypto==1.3.0
+pandas==2.0.3
 Pillow==10.0.0
 psycopg==3.1.9
 pycparser==2.21
@@ -27,7 +28,9 @@ pyhanko-certvalidator==0.23.0
 pypdf==3.14.0
 pypng==0.20220715.0
 python-bidi==0.4.2
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3
 PyYAML==6.0.1
 qrcode==7.4.2
 reportlab==3.6.13
